--- a/Tsukamoto_fuzzy.ipynb
+++ b/Tsukamoto_fuzzy.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-09T17:56:56.885026700Z",
-     "start_time": "2023-11-09T17:56:56.187006600Z"
+     "end_time": "2023-11-09T18:11:19.430923600Z",
+     "start_time": "2023-11-09T18:11:18.486964400Z"
     }
    },
    "outputs": [
@@ -89,7 +89,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
+   "outputs": [],
+   "source": [
+    "rule1 = ctrl.Rule(temperature['low'] & ec['low'] & ph['asam'], qualities[0]['fair'])\n",
+    "rule2 = ctrl.Rule(temperature['intermedium'] & ec['intermedium'] & ph['netral'], qualities[0]['good'])\n",
+    "rule3 = ctrl.Rule(temperature['high'] & ec['high'] & ph['basa'], qualities[0]['excellent'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-09T18:11:19.432995500Z",
+     "start_time": "2023-11-09T18:11:19.400553800Z"
+    }
+   },
+   "id": "573fca8570d3684f"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [],
+   "source": [
+    "# Create a control system\n",
+    "water_quality_ctrl = ctrl.ControlSystem([rule1, rule2, rule3])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-09T18:11:19.432995500Z",
+     "start_time": "2023-11-09T18:11:19.414102800Z"
+    }
+   },
+   "id": "20e5b02f77528573"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [],
+   "source": [
+    "# Simulation\n",
+    "water_quality_sim = ctrl.ControlSystemSimulation(water_quality_ctrl)\n",
+    "water_quality_sim.input['temperature'] = 25\n",
+    "water_quality_sim.input['ec'] = 800\n",
+    "water_quality_sim.input['pH'] = 7.5"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-09T18:11:19.499621600Z",
+     "start_time": "2023-11-09T18:11:19.432995500Z"
+    }
+   },
+   "id": "3f6c4db2eaaea6b0"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
@@ -97,7 +152,26 @@
      "text": [
       "Water Quality (Centroid): 54.04040404040411\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "# output\n",
+    "water_quality_sim.compute()\n",
+    "print(\"Water Quality (Centroid):\", water_quality_sim.output['water quality'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-09T18:11:19.499621600Z",
+     "start_time": "2023-11-09T18:11:19.446918Z"
+    }
+   },
+   "id": "e57635c12058f68e"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
     {
      "data": {
       "text/plain": "<Figure size 640x480 with 1 Axes>",
@@ -108,46 +182,14 @@
     }
    ],
    "source": [
-    "rule1 = ctrl.Rule(temperature['low'] & ec['low'] & ph['asam'], qualities[0]['fair'])\n",
-    "rule2 = ctrl.Rule(temperature['intermedium'] & ec['intermedium'] & ph['netral'], qualities[0]['good'])\n",
-    "rule3 = ctrl.Rule(temperature['high'] & ec['high'] & ph['basa'], qualities[0]['excellent'])\n",
-    "\n",
-    "# Create a control system\n",
-    "water_quality_ctrl = ctrl.ControlSystem([rule1, rule2, rule3])\n",
-    "\n",
-    "# Create a simulation to evaluate the control system\n",
-    "water_quality_sim = ctrl.ControlSystemSimulation(water_quality_ctrl)\n",
-    "\n",
-    "# Set input values for the simulation\n",
-    "water_quality_sim.input['temperature'] = 25\n",
-    "water_quality_sim.input['ec'] = 800\n",
-    "water_quality_sim.input['pH'] = 7.5\n",
-    "\n",
-    "# Compute the output\n",
-    "water_quality_sim.compute()\n",
-    "\n",
-    "# Print the result\n",
-    "print(\"Water Quality (Centroid):\", water_quality_sim.output['water quality'])\n",
-    "\n",
-    "# View the result\n",
-    "qualities[0].view(sim=water_quality_sim)\n"
+    "qualities[0].view(sim=water_quality_sim)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T17:58:42.149672300Z",
-     "start_time": "2023-11-09T17:58:41.955763900Z"
+     "end_time": "2023-11-09T18:11:19.675120600Z",
+     "start_time": "2023-11-09T18:11:19.459694700Z"
     }
-   },
-   "id": "573fca8570d3684f"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
    },
    "id": "67e52fc97ded7b7"
   }
