--- a/Tsukamoto_fuzzy.ipynb
+++ b/Tsukamoto_fuzzy.ipynb
@@ -2,16 +2,108 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-09T18:11:19.430923600Z",
-     "start_time": "2023-11-09T18:11:18.486964400Z"
+     "end_time": "2023-11-09T18:15:16.497395Z",
+     "start_time": "2023-11-09T18:15:14.811514600Z"
     }
    },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import skfuzzy as fuzz\n",
+    "from skfuzzy import control as ctrl\n",
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
+    "# Set variabel\n",
+    "temperature = ctrl.Antecedent(np.arange(0, 41, 1), 'temperature')\n",
+    "ec = ctrl.Antecedent(np.arange(0, 2001, 1), 'ec')\n",
+    "ph = ctrl.Antecedent(np.arange(0, 14, 1), 'pH')\n",
+    "qualities = []\n",
+    "qualities.append(ctrl.Consequent(np.arange(0, 101, 1), 'water quality', defuzzify_method=\"centroid\"))# centroid\n",
+    "qualities.append(ctrl.Consequent(np.arange(0, 101, 1), 'water quality', defuzzify_method=\"bisector\"))# bisector\n",
+    "qualities.append(ctrl.Consequent(np.arange(0, 101, 1), 'water quality', defuzzify_method=\"mom\"))# mom\n",
+    "qualities.append(ctrl.Consequent(np.arange(0, 101, 1), 'water quality', defuzzify_method=\"som\"))# som\n",
+    "qualities.append(ctrl.Consequent(np.arange(0, 101, 1), 'water quality', defuzzify_method=\"lom\"))# lom"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-09T18:15:16.513067200Z",
+     "start_time": "2023-11-09T18:15:16.501381400Z"
+    }
+   },
+   "id": "aea8d3fdbd21dc62"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "# Set range\n",
+    "temperature['low'] = fuzz.trimf(temperature.universe, [0, 0, 20])\n",
+    "temperature['intermedium'] = fuzz.trimf(temperature.universe, [0, 20, 30])\n",
+    "temperature['high'] = fuzz.trapmf(temperature.universe, [20, 30, 40, 40])\n",
+    "\n",
+    "ec['low'] = fuzz.trimf(ec.universe, [0, 0, 400])\n",
+    "ec['intermedium'] = fuzz.trimf(ec.universe, [0, 400, 1000])\n",
+    "ec['high'] = fuzz.trapmf(ec.universe, [400, 1000, 2000, 2000])\n",
+    "\n",
+    "ph['asam'] = fuzz.trimf(ph.universe, [0, 0, 6.5])\n",
+    "ph['netral'] = fuzz.trimf(ph.universe, [0, 6.5, 8.5])\n",
+    "ph['basa'] = fuzz.trapmf(ph.universe, [7, 8.5, 14, 14])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-09T18:15:16.536874600Z",
+     "start_time": "2023-11-09T18:15:16.516098800Z"
+    }
+   },
+   "id": "c0ef7ae215f29bc9"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "# Set range output\n",
+    "for quality in qualities:\n",
+    "    quality['fair'] = fuzz.trimf(quality.universe, [0, 0, 50])\n",
+    "    quality['good'] = fuzz.trimf(quality.universe, [0, 50, 100])\n",
+    "    quality['excellent'] = fuzz.trapmf(quality.universe, [50, 100, 100, 100])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-09T18:15:16.543130500Z",
+     "start_time": "2023-11-09T18:15:16.531282400Z"
+    }
+   },
+   "id": "573a88a9e130ce3c"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Anaconda3\\envs\\py310-tf\\lib\\site-packages\\skfuzzy\\control\\fuzzyvariable.py:122: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "  fig.show()\n"
+     ]
+    },
     {
      "data": {
       "text/plain": "<Figure size 640x480 with 1 Axes>",
@@ -46,50 +138,25 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import skfuzzy as fuzz\n",
-    "from skfuzzy import control as ctrl\n",
-    "%matplotlib inline\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "temperature = ctrl.Antecedent(np.arange(0, 41, 1), 'temperature')\n",
-    "ec = ctrl.Antecedent(np.arange(0, 2001, 1), 'ec')\n",
-    "ph = ctrl.Antecedent(np.arange(0, 14, 1), 'pH')\n",
-    "qualities = []\n",
-    "qualities.append(ctrl.Consequent(np.arange(0, 101, 1), 'water quality', defuzzify_method=\"centroid\"))# centroid\n",
-    "qualities.append(ctrl.Consequent(np.arange(0, 101, 1), 'water quality', defuzzify_method=\"bisector\"))# bisector\n",
-    "qualities.append(ctrl.Consequent(np.arange(0, 101, 1), 'water quality', defuzzify_method=\"mom\"))# mom\n",
-    "qualities.append(ctrl.Consequent(np.arange(0, 101, 1), 'water quality', defuzzify_method=\"som\"))# som\n",
-    "qualities.append(ctrl.Consequent(np.arange(0, 101, 1), 'water quality', defuzzify_method=\"lom\"))# lom\n",
-    "\n",
-    "\n",
-    "temperature['low'] = fuzz.trimf(temperature.universe, [0, 0, 20])\n",
-    "temperature['intermedium'] = fuzz.trimf(temperature.universe, [0, 20, 30])\n",
-    "temperature['high'] = fuzz.trapmf(temperature.universe, [20, 30, 40, 40])\n",
-    "\n",
-    "ec['low'] = fuzz.trimf(ec.universe, [0, 0, 400])\n",
-    "ec['intermedium'] = fuzz.trimf(ec.universe, [0, 400, 1000])\n",
-    "ec['high'] = fuzz.trapmf(ec.universe, [400, 1000, 2000, 2000])\n",
-    "\n",
-    "ph['asam'] = fuzz.trimf(ph.universe, [0, 0, 6.5])\n",
-    "ph['netral'] = fuzz.trimf(ph.universe, [0, 6.5, 8.5])\n",
-    "ph['basa'] = fuzz.trapmf(ph.universe, [7, 8.5, 14, 14])\n",
-    "\n",
-    "for quality in qualities:\n",
-    "    quality['fair'] = fuzz.trimf(quality.universe, [0, 0, 50])\n",
-    "    quality['good'] = fuzz.trimf(quality.universe, [0, 50, 100])\n",
-    "    quality['excellent'] = fuzz.trapmf(quality.universe, [50, 100, 100, 100])\n",
-    "\n",
+    "# View Graph\n",
     "temperature.view()\n",
     "ec.view()\n",
     "ph.view()\n",
     "q = qualities[0]\n",
     "q.view()"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-09T18:15:17.325903Z",
+     "start_time": "2023-11-09T18:15:16.546140300Z"
+    }
+   },
+   "id": "37c2e45da9fa7301"
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "rule1 = ctrl.Rule(temperature['low'] & ec['low'] & ph['asam'], qualities[0]['fair'])\n",
@@ -99,15 +166,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T18:11:19.432995500Z",
-     "start_time": "2023-11-09T18:11:19.400553800Z"
+     "end_time": "2023-11-09T18:15:17.337658200Z",
+     "start_time": "2023-11-09T18:15:17.321867900Z"
     }
    },
    "id": "573fca8570d3684f"
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# Create a control system\n",
@@ -116,15 +183,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T18:11:19.432995500Z",
-     "start_time": "2023-11-09T18:11:19.414102800Z"
+     "end_time": "2023-11-09T18:15:17.412564700Z",
+     "start_time": "2023-11-09T18:15:17.337658200Z"
     }
    },
    "id": "20e5b02f77528573"
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "# Simulation\n",
@@ -136,15 +203,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T18:11:19.499621600Z",
-     "start_time": "2023-11-09T18:11:19.432995500Z"
+     "end_time": "2023-11-09T18:15:17.412564700Z",
+     "start_time": "2023-11-09T18:15:17.352234700Z"
     }
    },
    "id": "3f6c4db2eaaea6b0"
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -162,15 +229,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T18:11:19.499621600Z",
-     "start_time": "2023-11-09T18:11:19.446918Z"
+     "end_time": "2023-11-09T18:15:17.413566600Z",
+     "start_time": "2023-11-09T18:15:17.366395300Z"
     }
    },
    "id": "e57635c12058f68e"
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
@@ -187,8 +254,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T18:11:19.675120600Z",
-     "start_time": "2023-11-09T18:11:19.459694700Z"
+     "end_time": "2023-11-09T18:15:17.620614300Z",
+     "start_time": "2023-11-09T18:15:17.382984Z"
     }
    },
    "id": "67e52fc97ded7b7"
