Add Tsukamoto Method

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-09T17:32:39.465941600Z",
-     "start_time": "2023-11-09T17:32:37.382731900Z"
+     "end_time": "2023-11-10T02:51:28.509933900Z",
+     "start_time": "2023-11-10T02:50:05.215319100Z"
     }
    },
    "outputs": [],
@@ -37,8 +37,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T17:32:39.512811300Z",
-     "start_time": "2023-11-09T17:32:39.469962700Z"
+     "end_time": "2023-11-10T02:51:28.604880300Z",
+     "start_time": "2023-11-10T02:51:28.509933900Z"
     }
    },
    "id": "67964ebf9e010fc7"
@@ -65,8 +65,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T17:32:39.539282800Z",
-     "start_time": "2023-11-09T17:32:39.500319400Z"
+     "end_time": "2023-11-10T02:51:28.668488200Z",
+     "start_time": "2023-11-10T02:51:28.589259300Z"
     }
    },
    "id": "cc4c746f9977ad78"
@@ -98,8 +98,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T17:32:39.566469900Z",
-     "start_time": "2023-11-09T17:32:39.514871700Z"
+     "end_time": "2023-11-10T02:51:28.764903500Z",
+     "start_time": "2023-11-10T02:51:28.636368600Z"
     }
    },
    "id": "43474d72095444ef"
@@ -116,8 +116,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T17:32:39.614049100Z",
-     "start_time": "2023-11-09T17:32:39.531449400Z"
+     "end_time": "2023-11-10T02:51:28.843345600Z",
+     "start_time": "2023-11-10T02:51:28.668488200Z"
     }
    },
    "id": "49ec13e84c1a4016"
@@ -141,8 +141,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T17:32:39.615061500Z",
-     "start_time": "2023-11-09T17:32:39.543649900Z"
+     "end_time": "2023-11-10T02:51:28.843345600Z",
+     "start_time": "2023-11-10T02:51:28.684327900Z"
     }
    },
    "id": "962fd2bf7ff59f5c"
@@ -167,11 +167,37 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T17:32:39.616068300Z",
-     "start_time": "2023-11-09T17:32:39.562264600Z"
+     "end_time": "2023-11-10T02:51:28.858977600Z",
+     "start_time": "2023-11-10T02:51:28.732417Z"
     }
    },
    "id": "1a3a0cbe44493c9c"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [],
+   "source": [
+    "df.to_csv('./df.csv')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-10T02:51:49.793236200Z",
+     "start_time": "2023-11-10T02:51:49.714683200Z"
+    }
+   },
+   "id": "da5018fe5d9be358"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "d27ea49243ab4206"
   }
  ],
  "metadata": {
